--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="text">Воспользуйтесь коллективным разумом нашей опытной команды финансовых экспертов,
                     аналитиков и лидеров отрасли, которые предоставят вам бесценную информацию и стратегии, основанные
                     на данных.</p>
-                <button type="button" class="btn lg yellow">Перейти к тарифам</button>
+                <a href="#rates"><button type="button" class="btn lg yellow">Перейти к тарифам</button></a>
             </div>
         </section>
         <section class="section graphs">
