--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
                                 <p class="text">В месяц</p>
                             </div>
                             <div class="info">
+                                <p class="title">Title 1</p>
                                 <p class="text">Lorem ipsum dolor sit</p>
                                 <p class="text">Lorem ipsum dolor sit amet consectetur</p>
                                 <p class="text">Lorem ipsum dolor sit amet</p>
                             </div>
+                        </div>
+                        <div class="middle">
+                            <img src="./images/Graph.png" alt="">
+                            <p class="text">Lorem ipsum dolor sit amet consectetur. Eu id enim sit ut at eu. Ipsum vitae
+                                fermentum eu non tempor adipiscing.</p>
                         </div>
                         <div class="bottom">
                             <button class="btn lg yellow">Начать</button>
@@ -66,11 +72,19 @@
                                 <p class="text">В месяц</p>
                             </div>
                             <div class="info">
+                                <p class="title">$7M+ выплачивается инвесторам</p>
                                 <p class="text">Lorem ipsum dolor sit</p>
                                 <p class="text">Lorem ipsum dolor sit amet consectetur</p>
                                 <p class="text">Lorem ipsum dolor sit amet</p>
                                 <p class="text">Lorem ipsum dolor</p>
                             </div>
+                        </div>
+                        <div class="middle">
+                            <img src="./images/Graph.png" alt="">
+                            <p class="text">Lorem ipsum dolor sit amet consectetur. Eu id enim sit ut at eu. Ipsum vitae
+                                fermentum eu non tempor adipiscing fusce quam odio. Ut libero dolor dui faucibus nisl
+                                mauris. Ac proin suscipit bibendum enim id id non viverra quis. Nec lorem gravida morbi
+                                mi.</p>
                         </div>
                         <div class="bottom">
                             <button class="btn lg yellow">Начать</button>
@@ -95,11 +109,18 @@
                                 <p class="text">В месяц</p>
                             </div>
                             <div class="info">
+                                <p class="title">Title 3</p>
                                 <p class="text">Lorem ipsum dolor sit</p>
                                 <p class="text">Lorem ipsum dolor sit amet consectetur</p>
                                 <p class="text">Lorem ipsum dolor sit amet</p>
                                 <p class="text">Lorem ipsum dolor</p>
                             </div>
+                        </div>
+                        <div class="middle">
+                            <img src="./images/Graph.png" alt="">
+                            <p class="text">Lorem ipsum dolor sit amet consectetur. Eu id enim sit ut at eu. Ipsum vitae
+                                fermentum eu non tempor adipiscing fusce quam odio. Ut libero dolor dui faucibus nisl
+                                mauris. Ac proin suscipit bibendum enim.</p>
                         </div>
                         <div class="bottom">
                             <button class="btn lg yellow">Начать</button>
@@ -124,12 +145,19 @@
                                 <p class="text"></p>
                             </div>
                             <div class="info">
+                                <p class="title">Title 4</p>
                                 <p class="text">Lorem ipsum dolor sit</p>
                                 <p class="text">Lorem ipsum dolor sit amet consectetur</p>
                                 <p class="text">Lorem ipsum dolor sit amet</p>
                                 <p class="text">Lorem ipsum dolor</p>
                                 <p class="text">Lorem ipsum</p>
                             </div>
+                        </div>
+                        <div class="middle">
+                            <img src="./images/Graph.png" alt="">
+                            <p class="text">Lorem ipsum dolor sit amet consectetur. Eu id enim sit ut at eu. Ipsum vitae
+                                fermentum eu non tempor adipiscing fusce quam odio. Ut libero dolor dui faucibus nisl
+                                mauris.</p>
                         </div>
                         <div class="bottom">
                             <button class="btn lg yellow">Начать</button>
@@ -189,14 +217,14 @@
                             <label for="adult">Мне больше 18 лет</label>
                         </div>
                     </div>
-                    <button type="submit" class="btn lg disabled">Начать</button>
+                    <button type="submit" class="btn lg disabled" id="submit">Начать</button>
                 </div>
             </form>
         </section>
     </main>
     <footer class="footer">
         <div class="container big">
-            <img src="./images/Logo.png" alt="">
+            <img src="./images/Logo.png" alt="" class="logo">
             <a href="#header"><img src="./images/Up.svg" alt="" id="up"></a>
             <a href="#rates"><button type="button" class="btn lg yellow" id="gotoRates">Перейти к тарифам</button></a>
         </div>
