added simple validation without intl-tel

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                 fermentum eu non tempor adipiscing.</p>
                         </div>
                         <div class="bottom">
-                            <button class="btn lg yellow">Начать</button>
-                            <a href="#" class="link">
+                            <a href="#form1"><button class="btn lg yellow">Начать</button></a>
+                            <a href="#form1" class="link">
                                 <div class="linkText">
                                     <p>Узнать больше</p>
                                     <svg width="8" height="13" viewBox="0 0 8 13" fill="none"
@@ -87,8 +87,8 @@
                                 mi.</p>
                         </div>
                         <div class="bottom">
-                            <button class="btn lg yellow">Начать</button>
-                            <a href="#" class="link">
+                            <a href="#form1"><button class="btn lg yellow">Начать</button></a>
+                            <a href="#form1" class="link">
                                 <div class="linkText">
                                     <p>Узнать больше</p>
                                     <svg width="8" height="13" viewBox="0 0 8 13" fill="none"
@@ -123,8 +123,8 @@
                                 mauris. Ac proin suscipit bibendum enim.</p>
                         </div>
                         <div class="bottom">
-                            <button class="btn lg yellow">Начать</button>
-                            <a href="#" class="link">
+                            <a href="#form1"><button class="btn lg yellow">Начать</button></a>
+                            <a href="#form1" class="link">
                                 <div class="linkText">
                                     <p>Узнать больше</p>
                                     <svg width="8" height="13" viewBox="0 0 8 13" fill="none"
@@ -160,8 +160,8 @@
                                 mauris.</p>
                         </div>
                         <div class="bottom">
-                            <button class="btn lg yellow">Начать</button>
-                            <a href="#" class="link">
+                            <a href="#form1"><button class="btn lg yellow">Начать</button></a>
+                            <a href="#form1" class="link">
                                 <div class="linkText">
                                     <p>Узнать больше</p>
                                     <svg width="8" height="13" viewBox="0 0 8 13" fill="none"
@@ -186,7 +186,7 @@
             </div>
         </section>
         <section class="section reg">
-            <form action="" class="form">
+            <form action="" class="form" id="form1">
                 <p class="title">Разблокируйте свою следующую возможность — оставьте свои контактные данные, чтобы
                     отправиться в путешествие возможностей</p>
                 <div class="inputs">
@@ -203,6 +203,7 @@
                         <input type="text" name="email" class="input">
                     </div>
                     <div class="inputBlock">
+                        <p class="caption">Введите номер</p>
                         <input type="tel" name="phone" class="input" id="#phone">
                     </div>
                 </div>
